--- a/css/styles.css
+++ b/css/styles.css
@@ -70,14 +70,17 @@ a {
 	padding: 10px;
 }
 .input_field_wrapper_float_left_right .input_field select {
-	float:right;
-	width:50%;
+	float: right;
+	width: 52.3%;
 	background-color: #FFF;
 	border: 1px solid #ccc;
 	margin: 0;
 	color: #333;
 	font-size: 14px;
+	height: 39px;
 	padding: 10px;
+	-webkit-appearance: none;
+	border-radius: 0px;
 } 
 .input_field_wrapper_float_left_right .input_field textarea {
 	float:right;
@@ -99,10 +102,23 @@ a {
 	text-decoration: none;
 	background-color:#67b2d9;
 }
-
-.input_field_wrapper_float_left_right .input_field input[type=submit]:hover,
-.input_field_wrapper_float_left_right .input_field input[type=submit]:hover {
+.input_field_wrapper_float_left_right .input_field input[type=submit].blue {
+	border: 1px solid #4898bb;
+	color: #fff;
+	background-color:#67b2d9;
+}
+.input_field_wrapper_float_left_right .input_field input[type=submit].blue:hover,
+.input_field_wrapper_float_left_right .input_field input[type=submit].blue:hover {
 	background-color:#4E8EAF;
+}
+.input_field_wrapper_float_left_right .input_field input[type=submit].grey {
+	border: 1px solid #919191;
+	color: #fff;
+	background-color:#CACACA;
+}
+.input_field_wrapper_float_left_right .input_field input[type=submit].grey:hover,
+.input_field_wrapper_float_left_right .input_field input[type=submit].grey:hover {
+	background-color:#A0A0A0;
 }
 }
 @media all and (max-width: 979px) and (min-width: 580px) {
@@ -149,14 +165,17 @@ a {
 	padding: 10px;
 }
 .input_field_wrapper_float_left_right .input_field select {
-	float:right;
-	width:50%;
+	float: right;
+	width: 53%;
 	background-color: #FFF;
 	border: 1px solid #ccc;
 	margin: 0;
 	color: #333;
 	font-size: 14px;
+	height: 39px;
 	padding: 10px;
+	-webkit-appearance: none;
+	border-radius: 0px;
 }
 .input_field_wrapper_float_left_right .input_field textarea {
 	float:right;
@@ -168,7 +187,7 @@ a {
 	font-size: 14px;
 	padding: 10px;
 }
-.input_field_wrapper_float_left_right .input_field input[type=submit] {
+.input_field_wrapper_float_left_right .input_field input[type=submit].blue {
 	float:right;
 	width:52%;
 	padding: 10px;
@@ -179,8 +198,8 @@ a {
 	background-color:#67b2d9;
 }
 
-.input_field_wrapper_float_left_right .input_field input[type=submit]:hover,
-.input_field_wrapper_float_left_right .input_field input[type=submit]:hover {
+.input_field_wrapper_float_left_right .input_field input[type=submit].blue:hover,
+.input_field_wrapper_float_left_right .input_field input[type=submit].blue:hover {
 	background-color:#4E8EAF;
 }
 }
@@ -229,14 +248,17 @@ a {
 	margin: 0px 15px 15px 15px;
 }
 .input_field_wrapper_float_left_right .input_field select {
-	float: left;
-	width: 85%;
+	float: right;
+	width: 90%;
 	background-color: #FFF;
 	border: 1px solid #ccc;
 	color: #333;
 	font-size: 14px;
+	height: 39px;
 	padding: 10px;
-	margin: 0px 15px 15px 15px;
+	-webkit-appearance: none;
+	border-radius: 0px;
+	margin: 0px 23px 15px 15px;
 }
 .input_field_wrapper_float_left_right .input_field textarea {
 	float: left;
@@ -248,7 +270,7 @@ a {
 	padding: 10px;
 	margin: 0px 15px 15px 15px;
 }
-.input_field_wrapper_float_left_right .input_field input[type=submit] {
+.input_field_wrapper_float_left_right .input_field input[type=submit].blue {
 	float:left;
 	width:90%;
 	padding: 10px;
@@ -260,8 +282,8 @@ a {
 	margin: 0px 15px 15px 15px;
 }
 
-.input_field_wrapper_float_left_right .input_field input[type=submit]:hover,
-.input_field_wrapper_float_left_right .input_field input[type=submit]:hover {
+.input_field_wrapper_float_left_right .input_field input[type=submit].blue:hover,
+.input_field_wrapper_float_left_right .input_field input[type=submit].blue:hover {
 	background-color:#4E8EAF;
 }
 
