--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,8 @@
 #support_contact_form_submit {
     float: right;
 }
-
-#support_contact_form_submit_button {
-    width: 90%;
+.support_contact_form_submit_button {
+    width: 150px;
     padding: 10px;
     font-size: 16px;
     text-decoration: none;
@@ -44,4 +43,8 @@
     border: 1px solid #0077B9;
     color: #fff;
     background-color: #0099ee;
+}
+
+.support_contact_form_submit_button:hover {
+    background-color: #0082CA;
 }
